[gd_scene load_steps=8 format=3 uid="uid://b4ugmt28rldcf"]

[ext_resource type="Script" path="res://Inventory/InventoryUI/Inventory_UI.gd" id="1_w8d0g"]
[ext_resource type="Resource" uid="uid://cs46dag621l4e" path="res://Inventory/InventoryResources/player_inventory.tres" id="2_mrbwc"]
[ext_resource type="PackedScene" uid="uid://chnbtbv1iu5om" path="res://Inventory/InventoryUI/inventory_UI_slot.tscn" id="3_gxxko"]
[ext_resource type="Theme" uid="uid://2u22t484dthy" path="res://Inventory/InventoryUI/inventory_theme.tres" id="4_yr8sc"]
[ext_resource type="FontFile" uid="uid://cnrntny6vvh8t" path="res://Assets/Fonts/Terminus.ttf" id="5_eytcr"]
[ext_resource type="Theme" uid="uid://clr1uetrq7vum" path="res://Inventory/InventoryUI/description_theme.tres" id="6_rdw0m"]
[ext_resource type="PackedScene" uid="uid://bmy7n8gq75pij" path="res://Inventory/InventoryUI/UIInvSlotContainer/UI_inv_slot_container.tscn" id="7_m35h1"]

[node name="Inventory_UI" type="Control"]
custom_minimum_size = Vector2(104, 56)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -112.5
offset_right = 114.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_w8d0g")
inventory = ExtResource("2_mrbwc")
slot_scene = ExtResource("3_gxxko")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -86.5
offset_right = 114.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_yr8sc")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TitleBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("5_eytcr")
theme_override_font_sizes/font_size = 12
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ItemDescription" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("6_rdw0m")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription"]
layout_mode = 2
mouse_filter = 2

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 0
text = "Default Description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 3
text = "Default Description"
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
alignment = 1

[node name="UseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Use"

[node name="DropButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Drop"

[node name="UIInvSlotContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_m35h1")]
unique_name_in_owner = true
layout_mode = 2
inventory = ExtResource("2_mrbwc")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer/ButtonContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDescription/VBoxContainer/ButtonContainer/DropButton" to="." method="_on_drop_button_pressed"]
